# inventory_management_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  generate_entities.sh
src/: main.rs
src/entities/: inventory.rs  mod.rs  prelude.rs  product.rs
src/migrator/: .lib.rs.swp  m20220101_000001_create_product_table.rs  m20220101_000002_create_inventory_table.rs  mod.rs
