[package]
name = "inventory_management_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros", "mock" ] }
futures = "0.3.28"
sea-orm-migration = "^0.12.0"
tokio = { version = "1", features = ["full"] }
